--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@700&display=swap');
 
 
 
@@ -25,9 +27,9 @@ p {
 }
 
 .navwrapper a {
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    font-weight: bold;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-weight: bolder;
+    font-size: 25px;
     margin: 0 auto;
 }
 
@@ -107,7 +109,6 @@ section {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    padding: 0px 10px;
 }
 
 .klein {
